--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@apollo/client": "^3.7.0",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
